finish the language page routing

--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -3,6 +3,7 @@
 <nav>
   <a routerLink="/Home">Home</a>
   <a routerLink="/Language">Language</a>
+  <a routerLink="/Country">Country</a>
 </nav>
 
 <router-outlet></router-outlet>
